# VeriNode-Backend

./: ALL_ISSUES_RESOLVED.md  BENCHMARK_FIX.md  COMMIT_MESSAGE.txt  COVERAGE_FIX_COMPLETE.md  COVERAGE_FIX_SUMMARY.md  COVERAGE_THRESHOLD_ADJUSTMENT.md  DEPENDENCY_POLICY.md  Dockerfile  FILES_CREATED.md  FINAL_COVERAGE_FIX.md  FINAL_SUMMARY.md  GIT_PUSH_SUCCESS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_REPORT.md  INDEX.md  PUSH_SUCCESS_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  RACE_CONDITION_FIX_SUMMARY.md  README.md  README_REPUTATION.md  REPUTATION_SYSTEM_COMPLETE.md  SOLUTION_DIAGRAM.md  TODO.md  analyze_coverage.js  commit_script.ps1  config.json.example  demo-config.js  demo-config.json  do_commits.bat  index.js  install-hooks.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm.json  shutdown.js  test-shutdown.js  tsconfig.json
.github/workflows/: benchmark.yml  consensus-sim.yml  deploy-docs.yml  docker-image.yml  load-test.yml  security-alert.yml  (+2 more)
docs/: audit-runbook.md  config-migration.md
examples/: reputation-usage.ts
scripts/: coverage-enforce.js  pre-commit-hook  run-tests.cjs  setup-reputation-db.bat  setup-reputation-db.sh
src/api/gateway/: Cargo.toml
src/api/gateway/src/: lib.rs  mtls_auth.rs  mtls_auth_test.rs  proxy.rs
tests/: auth.test.ts  benchmark.test.js  config-drift.test.ts  config.test.js  config.test.ts  consensus_sim.test.ts  dead_letter_queue.test.ts  dlq_api.test.js  mtls.test.ts  pool_isolation.test.ts  rate_limiter.test.ts  slashing_sequencer.test.ts  state_archival.test.ts  tls_rotation.test.ts  tracer.test.ts
(+106 files in other folders)
