[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.21" }
rustls-pemfile = "1.0"
x509-parser = "0.15"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
async-trait = "0.1"

[dev-dependencies]
rcgen = "0.11"
